<resources>
    <string name="app_name">Mqitty</string>
    <string name="send_label">Send</string>
    <string name="receive_label">Receive</string>
    <string name="settings_label">Settings</string>
    <string name="sub_title">Mqtt client</string>
    <string name="filter_label">Filter</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search...</string>
    <string name="add_label">Add</string>
    <string name="create_send_title_label">Create your custom send \nmessage.</string>
    <string name="return_label">Return</string>
    <string name="create_label_btn">CREATE</string>
    <string name="name_hint">Name...</string>
    <string name="description_form">Description...</string>
    <string name="broker_form">Broker... (like: broker.emqx.io)</string>
    <string name="topic_form">Topic...</string>
    <string name="message_form">Message...</string>
    <string name="custom_receiver_label">Create your custom receiver.</string>
    <string name="modify_send_title">Modify your custom send\nmessage</string>
    <string name="save_btn">SAVE</string>
    <string name="delete_btn">DELETE</string>
    <string name="modify_label">Modify your receiver.</string>
    <string name="description">Description</string>
    <string name="receive">Receive</string>
    <string name="more_option">More option</string>
    <string name="active_panel">Active panel</string>
    <string name="settings">Settings</string>
    <string name="about_label">Mqutty is a project born from my automation systems professor\'s initiative to contact ENEA to discuss energy efficiency. This led to a project that included the use of the MQTT protocol, so I decided to create my own MQTT client.</string>
    <string name="github_project_link">https://github.com/tommy-210/Mqitty</string>
    <string name="github_project_label">Github</string>
    <string name="default_panel_label">Default panel</string>
    <string name="theme_mode_label">Theme mode</string>
    <string name="time_limit_msg_label">Time limit to store messages(in days)</string>
    <string name="about_subtitle">About</string>
    <string name="disable_notification_settings">Enable notification for receiver</string>

<!--    database settings-->
    <string name="theme_db">THEME_MODE</string>
    <string name="panel_db">DEFAULT_PANEL</string>
    <string name="limit_time_db">LIMIT_TIME_MSG</string>
    <string name="check_updates">Check Updates</string>
    <string name="keyword_custom_notification">Keyword for custom notification: \n(ONLY FOR CUSTOM)</string>
</resources>