<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/create_receiver_root"
    android:fitsSystemWindows="true"
    style="@style/SCREEN"
    tools:context=".ui.CreateReceiveActivity">


    <!--    header section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/return_section"
        android:background="?attr/app_backgroundColor"
        app:layout_constraintTop_toTopOf="@id/create_receiver_root"
        app:layout_constraintRight_toRightOf="@id/create_receiver_root"
        app:layout_constraintLeft_toLeftOf="@id/create_receiver_root">

        <!--        return icon-->
        <ImageView
            android:id="@+id/return_btn"
            android:layout_width="44dp"
            android:layout_height="38dp"
            style="@style/RETURN_ICON"
            android:contentDescription="@string/return_label"
            app:layout_constraintTop_toTopOf="@id/return_section"
            app:layout_constraintLeft_toLeftOf="@id/return_section"
            app:layout_constraintBottom_toBottomOf="@id/return_section"
            android:layout_marginStart="@dimen/margin_20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    title-->
    <TextView
        android:id="@+id/create_receiver_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_receiver_label"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="@dimen/margin_20dp"
        style="@style/TEXT"
        app:layout_constraintTop_toBottomOf="@id/return_section"
        app:layout_constraintRight_toRightOf="@id/create_receiver_root"
        app:layout_constraintLeft_toLeftOf="@id/create_receiver_root"/>

    <!--    form input layout-->
    <LinearLayout
        android:id="@+id/receiver_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintVertical_weight="1"
        android:layout_marginVertical="30dp"
        android:paddingHorizontal="@dimen/padding_form_horizontal"
        app:layout_constraintTop_toBottomOf="@id/create_receiver_title"
        app:layout_constraintRight_toRightOf="@id/create_receiver_root"
        app:layout_constraintLeft_toLeftOf="@id/create_receiver_root"
        app:layout_constraintBottom_toBottomOf="@id/create_receiver_root">

        <!--        name of custom send message-->
        <EditText
            android:id="@+id/name_receiver"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_divider"
            android:autofillHints="none"
            android:hint="@string/name_hint"
            android:inputType="text"
            android:textColorHint="?attr/app_hintTextColor" />

        <!--        description of custom send message-->
        <EditText
            android:background="@drawable/border"
            android:paddingStart="4dp"
            android:id="@+id/description_receiver"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="15sp"
            android:layout_marginVertical="@dimen/padding_divider"
            android:autofillHints="none"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/description_form"
            android:inputType="textMultiLine"
            android:textColorHint="?attr/app_hintTextColor" />

        <!--        broker of custom send message for mqtt-->
        <EditText
            android:id="@+id/broker_receiver"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_divider"
            android:autofillHints="none"
            android:hint="@string/broker_form"
            android:inputType="text"
            android:textColorHint="?attr/app_hintTextColor" />

        <!--        topic of custom send message for mqtt-->
        <EditText
            android:id="@+id/topic_receiver"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/padding_divider"
            android:autofillHints="none"
            android:hint="@string/topic_form"
            android:inputType="text"
            android:textColorHint="?attr/app_hintTextColor" />

<!--        notification section-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Enable notification:"
            android:layout_marginVertical="@dimen/padding_divider"/>

<!--        choose if enable notification or not or a custom notification based on keyword-->
        <RadioGroup
            android:id="@+id/radioGroup_notification_receiver"
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

<!--            no notification radio btn-->
            <RadioButton
                android:id="@+id/radioBtn_none_receiver"
                style="@style/RADIO_BUTTON"
                android:paddingHorizontal="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="None"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

<!--            enable notification radio btn-->
            <RadioButton
                android:id="@+id/radioBtn_all_receiver"
                style="@style/RADIO_BUTTON"
                android:paddingHorizontal="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="All"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

<!--            set a custom notificaiton-->
            <RadioButton
                android:id="@+id/radioBtn_custom_receiver"
                style="@style/RADIO_BUTTON"
                android:paddingHorizontal="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Custom"/>

            <Space
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"/>

        </RadioGroup>

        <TextView
            android:layout_marginTop="@dimen/padding_divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keyword_custom_notification"/>

<!--        if you have selected custom radio btn, you must insert a keyword to filter-->
        <EditText
            android:id="@+id/keyword_notification_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textSize="14sp"
            android:textColorHint="?attr/app_hintTextColor"
            android:hint="Keyword to filter"
            android:autofillHints="none"/>

        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <!--    create btn-->
        <Button
            android:id="@+id/save_receiver_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_label_btn"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Space
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>